--- a/css/style.scss
+++ b/css/style.scss
@@ -63,7 +63,10 @@
 	img{
 	    width: 100%;
 		height: 100%;
-		padding-top: 4px;	
+		padding-top: 4px;
+		@media only screen and (max-width: 992px){
+			width: 85%;
+	    }	
 	}
 }
 .ap-location{
@@ -111,11 +114,12 @@
 		position: absolute;
 		left: 33px;
 		top: 16px;
-		@media only screen and (max-width: 768px){
+		@media only screen and (max-width: 992px){
+			left: 18px;
 		    top: 30px;
 	    }
 	}
-	@media only screen and (max-width: 768px){
+	@media only screen and (max-width: 992px){
 		margin-top: 15px;
 	} 
 }
@@ -127,6 +131,11 @@
 	    background-color: #E0E0E0;
 	    height: 20px;
 	    width: 1px;
+}
+@media only screen and (max-width: 992px){
+		.app-search-column{
+	        padding:0px !important;
+         }
 }
 .app-login{
 	height: 100%;
@@ -157,7 +166,7 @@
 	display: none;
 }
 .header{
-	@media only screen and (max-width: 768px) {
+	@media only screen and (max-width: 992px) {
         .destop-view{
         	display: none;
         }
@@ -333,9 +342,9 @@
 // grocery store
 .grocry-store{
    padding: 40px 0px;
-   .store-row{
-	margin-bottom: 40px;
-    }
+ //   .store-row{
+	// margin-bottom: 40px;
+ //    }
 }
 
 
